kubeadm/samples/nginx-sample-with-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
spec:
  selector:
    matchLabels:
      app: nginx-test
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: master
        image: nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nfs-test
          mountPath: /usr/share/nginx/html
      restartPolicy: Always
      volumes:
      - name: nfs-test
        persistentVolumeClaim:
          claimName:  nfs-test-claim-1
  
---

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: nginx-test
  name: nginx-test
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31080
  selector:
    app: nginx-test
