kubeadm/samples/nginx-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
spec:
  selector:
    matchLabels:
      app: nginx-test
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: master
        image: nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
      restartPolicy: Always

---

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: nginx-test
  name: nginx-test
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: nginx-test
---

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: nginx-test
  name: nginx-test-lb
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.100.40
  ports:
  - port: 81
    targetPort: 80
    nodePort: 30081
  selector:
    app: nginx-test

---

kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: nginx-test
  name: nginx-test-en
spec:
  type: ExternalName
  externalName: nginx.minimum.recitativo.example
  ports:
  - port: 82
    targetPort: 80
    nodePort: 30082
  selector:
    app: nginx-test
