kubeadm/samples/nginx-with-fluentd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    type: nginx-fd
  name: nginx-with-fluentd
spec:
  selector:
    type: webserver
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    type: nginx-fd
  name: nginx-with-fluentd
spec:
  volumes:
    - name: log-dir
      persistentVolumeClaim:
        claimName: nfs-nginx-log
    - name: log-conf
      configMap:
        name: fluentd-conf
  containers:
  - name: web
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
      - name: log-dir
        mountPath: "/var/log/nginx/"
  - name: fdlogger
    image: k8s.gcr.io/fluentd-gcp:1.30
    volumeMounts:
      - name: log-dir
        mountPath: "/var/log"
      - name: log-conf
        mountPath: "/etc/fluentd-config"
