kubeadm/samples/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: default
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2
          args:
            - --api.insecure=true
            - --api.dashboard=true
            - --accesslog
            - --entrypoints.traefik.address=:8080
            - --entrypoints.dns.address=:53/udp
            - --entrypoints.web.address=:80
            - --entrypoints.whoami.address=:81/tcp
            #- --entrypoints.websecure.address=:443
            - --providers.kubernetescrd
            #- --certificatesresolvers.myresolver.acme.tlschallenge
            #- --certificatesresolvers.myresolver.acme.email=foo@you.com
            #- --certificatesresolvers.myresolver.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            #- --certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
          ports:
            - name: traefik
              containerPort: 8080
              protocol: TCP
            - name: dns
              containerPort: 53
              protocol: UDP
            - name: web
              containerPort: 80
              protocol: TCP
            #- name: websecure
            #  containerPort: 443
            #  protocol: TCP
            - name: admin
              containerPort: 81
              protocol: TCP
            - name: whoami
              containerPort: 82
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - name: traefik
      port: 8080
      protocol: TCP
      nodePort: 32180
    - name: dns
      port: 53
      protocol: UDP
      nodePort: 32053
    - name: web
      port: 80
      protocol: TCP
      nodePort: 32080
    #- name: websecure
    #  port: 443
    #  protocol: TCP
    - name: whoami
      port: 81
      protocol: TCP
      nodePort: 32081
  selector:
    app: traefik
---
