kubeadm/samples/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  rules:
  - host: nginx.minimum.laptop.example
    http:
      paths:
      - path: /test
        backend:
          serviceName: nginx-test
          servicePort: 80
      - path: /priority
        backend:
          serviceName: nginx-priority
          servicePort: 80
