kubeadm/samples/traefik-nginx-test.yaml
apiVersion: trefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-test-ir
spec:
  entryPoints: web
